tests/NormalTests/paczka2/big_fuzzy/14145231.err
Error in line 3: SmTJ A641 85,5
Error in line 1: 1I2AKT8YP S248 87,4
Error in line 12: 1I2AKT8YP S248 14,57
Error in line 11: 1I2AKT8YP S91 49,8
Error in line 9: oaDxYkM S531 57,2
Error in line 4: SmTJ S248 55,8
Error in line 16: SmTJ S91 81,7
Error in line 19: 3tedmNH A641 95,8
Error in line 24: 3tedmNH S531 299,9
Error in line 43: oaDxYkM S91 27,5
Error in line 49: SeseMaL A641 62,8
Error in line 45: oaDxYkM S248 6,1
Error in line 55: SmTJ A641 277,0
Error in line 54: S248 S531 88,2
Error in line 65: CPn7fah S91 91,7
Error in line 63: S248 A641 37,3
Error in line 14: 1I2AKT8YP S248 41,0
Error in line 72: 1I2AKT8YP S531 -1,5
Error in line 69: oaDxYkM S248 50,1
Error in line 78: SeseMaL S91 0,98
Error in line 79: 3tedmNH S91 90,6
Error in line 76: SeseMaL S248 74,7
Error in line 71: 1I2AKT8YP S531 8,6
Error in line 86: 1I2AKT8YP S91 27,9
Error in line 85: SeseMaL S91 0,3
Error in line 104: SmTJ S248 6,9
Error in line 110: SmTJ S248 20,0
Error in line 115: CPn7fah S531 5,3
Error in line 111: SeseMaL S531 25,9
Error in line 120: SeseMaL A641 94,2
Error in line 121: SeseMaL S91 60,8
Error in line 133: CPn7fah S531 8,4
Error in line 142: SeseMaL S91 96,2
Error in line 140: S248 S91 65,1
Error in line 159: 1I2AKT8YP S91 1,2
Error in line 160: 1I2AKT8YP S531 15,4
Error in line 165: 1I2AKT8YP A641 37,71
Error in line 161: 1I2AKT8YP S91 37,9
Error in line 187: 3tedmNH S91 23,1
Error in line 203: S248 S531 31,1
Error in line 201: oaDxYkM A641 60,5
Error in line 202: CPn7fah S531 36,4
Error in line 211: CPn7fah S248 36,7
Error in line 214: S248 S91 11,7
Error in line 220: SmTJ S91 66,6
Error in line 221: 3tedmNH A641 34,3
Error in line 239: 3tedmNH A641 5,3
Error in line 242: 3tedmNH S248 62,8
